# Atlas

./: .gitignore  LICENSE  README.md  ROADMAP_TODO.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
docs/: learning_rust_backend.md  phase2_detailed_status.md  phase2_implementation_plan.md  phase2_task.md  phase2_walkthrough.md  proposal_declarative_ui.md  rust_guide.md  技术实现.md  模块开发指南.md  高级功能.md
modules/crawler-example/: manifest.json
modules/crawler-example/backend/: main.py
modules/crawler-example/ui/: layout.json5
modules/spider-module/: icon.png.txt
modules/spider-module/backend/: main.py  spider.py
modules/spider-module/ui/: index.tsx  styles.css
src/: App.tsx  index.css  main.tsx  theme.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/src/: commands.rs  main.rs  module_manager.rs  process_manager.rs
src-tauri/src/core/: mod.rs  process_manager.rs  scanner.rs
src-tauri/src/models/: manifest.rs
src/components/layout/: Layout.tsx  Sidebar.tsx  index.ts
src/components/modules/: ModuleContainer.tsx  index.ts
src/components/ui/: Button.tsx  DecryptedText.tsx  Icon.tsx  Input.tsx  (+9 more)
src/contexts/: NavigationContext.tsx  SettingsContext.tsx  ToastContext.tsx
src/core/: ApiClient.ts  ModuleLoader.tsx  ModuleRegistry.ts
src/hooks/: useTheme.ts
src/i18n/: config.ts
src/locales/: en-UD.json  en-US.json  lol-US.json  tlh.json  zh-CN.json
src/pages/: ComponentShowcasePage.tsx  CrawlerPage.tsx  HomePage.tsx  SettingsPage.tsx
src/utils/: iconMapper.ts
(+50 files in other folders)
