[package]
name = "atlas"
version = "0.1.0"
description = "模块化启动器框架"
authors = ["Your Name"]
license = ""
repository = ""
edition = "2021"

# Tauri 依赖配置
# 需要添加的主要依赖：
# - tauri: Tauri 框架核心
# - serde: 序列化/反序列化
# - serde_json: JSON 处理
# - tokio: 异步运行时
# - anyhow: 错误处理

[build-dependencies]
# tauri-build = { version = "1.5", features = [] }

[dependencies]
# tauri = { version = "1.5", features = [] }
# serde = { version = "1.0", features = ["derive"] }
# serde_json = "1.0"
# tokio = { version = "1", features = ["full"] }
# anyhow = "1.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
